# Cwiczenia

./: FunkcjaPodwajajaca.c  README.md  ZamianaSystemowLiczbowych.c  tescik.c
Chess/: Chess.cbp  Chess.depend  Chess.layout  bishop_possible_moves.h  convert_number_to_letter.h  knight_possible_moves.h  main.c  move.h  pawn_possible_moves.h  queen_possible_moves.h  rook_possible_moves.h
Chess/Chess/: Chess.cbp  Chess.depend  Chess.layout  board.h  convert_letter_to_number.h  king_possible_moves.h  main.c  move.h  pawn_possible_moves.h
Cwiczenia/: ASCII.c  Alfabet.c  CzyJestes.c.c  CzyTekstySaTakieSame.c  KalkulatorSwitchWhile.c  LiczbyPodzielnePrzez6.c  LiczenieDlugosciTekstu.c  RozmiarBoolLimity.c  SortowanieTablicy.c  SprawdzanieLiczyPierwszej.c.c  SumaOd30do100.c  WartoscMaksTablicy.c  WartoscMinTablicy.c  WyszukiwanieZnakuTablicy.c
CwiczeniaPython/: KalkulatorKalorii.py
Programy/: kurs.c  while.c
Pulpit/: main.c
Statki/: Kombinacje.c  Statki1vs1.c  StatkiNaIloscRuchow.c  StatkiWorkspace.c
Zajecia3/Obrazek/: CMakeLists.txt  CzlowiekZnanyZImienia.cpp  CzlowiekZnanyZImienia.h  CzlowiekZnanyZInternetu.cpp  CzlowiekZnanyZInternetu.h  CzlowiekZnanyZWidzenia.cpp  CzlowiekZnanyZWidzenia.h  DobrzeZnanyKolega.cpp  DobrzeZnanyKolega.h  Zwierze.cpp  Zwierze.h
