cmake_minimum_required(VERSION 3.17)
project(c__)

set(CMAKE_CXX_STANDARD 14)

add_executable(c__ main.cpp DobrzeZnanyKolega.cpp DobrzeZnanyKolega.h CzlowiekZnanyZImienia.cpp CzlowiekZnanyZImienia.h Zwierze.cpp Zwierze.h CzlowiekZnanyZWidzenia.cpp CzlowiekZnanyZWidzenia.h CzlowiekZnanyZInternetu.cpp CzlowiekZnanyZInternetu.h)